fix searchbar render  issue on mobile

--- a/client/components/SearchBar/styles.less
+++ b/client/components/SearchBar/styles.less
@@ -1,5 +1,10 @@
 .searchBar {
  
+     display: flex;
+     width: 100%;
+     flex-direction: row;
+     align-items: center;
+ 
     input {
         width: 100%;
         padding: 5px 5px 5px 25px;
